syntax = "proto3";

option go_package = "Laboratorio 4/proto";

package proto;

message Message {
    string body = 1;
}

service MessageService {
    rpc RequestMount(Message) returns (Message); 
    rpc RequestInformation(Message) returns (Message);
}