syntax = "proto3";

option go_package = "Laboratorio 4/proto";

import "google/protobuf/empty.proto";

package proto;

message Message {
    string body = 1;
}

service MessageService {
    rpc RequestMountToDoshBank(Message) returns (Message);
    rpc RequestMountToDirector(Message) returns (Message);
    rpc RequestDecision(Message) returns (Message);
    rpc RequestInformationToDataNode(Message) returns (Message);
    rpc AddInformation(Message) returns (google.protobuf.Empty);
    rpc SendInformation(Message) returns (Message);
}